# TiKV-Class

./: .gitignore  README.md  index.html  move.sh
docs/: README.md  SUMMARY.md
project-2/: Cargo.toml
project-2/src/: error.rs  kv.rs
project-3/: Cargo.toml
project-3/benches/: kvs_benchmark.rs
project-3/criterion_result/read_bench/kvs/base/: estimates.json  raw.csv  sample.json  tukey.json
project-3/criterion_result/read_bench/kvs/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
project-3/criterion_result/read_bench/kvs/report/: index.html
project-3/criterion_result/read_bench/report/: index.html
project-3/criterion_result/report/: index.html
project-3/criterion_result/write_bench/report/: index.html
project-3/src/: client.rs  error.rs  kv.rs  lib.rs  server.rs
project-3/src/engine_kvs/: kvs.rs  mod.rs  my_kvs.rs
project-3/src/engine_trait/: engine.rs  mod.rs
project-3/tests/: kv_store.rs
project-4/: Cargo.toml
project-4/benches/: kvs_benchmark.rs
project-4/criterion_result/rayon_kvs_read/report/: index.html
project-4/criterion_result/rayon_kvs_write/report/: index.html
project-4/criterion_result/rayon_sled_read/report/: index.html
project-4/criterion_result/rayon_sled_write/report/: index.html
project-4/criterion_result/report/: index.html
project-4/criterion_result/shared_queue_kvs/base/: estimates.json  raw.csv  sample.json  tukey.json
project-4/criterion_result/shared_queue_kvs/new/: benchmark.json
project-4/criterion_result/shared_queue_kvs/report/: index.html
project-4/criterion_result/shared_queue_kvs_read/report/: index.html
project-4/criterion_result/shared_queue_kvs_write/report/: index.html
project-4/src/: error.rs  lib.rs  request.rs  server.rs
project-4/src/engine_kvs/: kvs_command.rs  kvs_reader.rs  kvs_writer.rs  mod.rs  my_kvs.rs
project-4/src/engine_sled/: mod.rs  sled_kvs.rs
project-4/src/engine_trait/: engine.rs
project-4/src/thread_pool/: mod.rs  naive_thread_pool.rs  rayon_thread_pool.rs  shared_queue_thread_pool.rs
project-4/tests/: kv_store.rs
(+186 files in other folders)
