[package]
name = "kvs"
version = "0.1.0"
authors = ["Rustin Liu <rustin.liu@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
serde = "1.0.104"
serde_json = "1.0.44"
structopt = "0.2.15"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
sled = "0.31.0"


[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.0"
rand = "0.7"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.3.1"

[[bench]]
name = "kvs_benchmark"
harness = false
